test/oscar/compiler/errors/funcNotFound.oscar
def add5(int: x) => int = {
	return x + 5;
}

def main() => unit = {
	int y = add5(1, 5));
}